--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>Still tryna figure this out 😬</p>
+<h1>⚠️ ⚠️ ⚠️</h1>
+<p>WORK IN PROGRESS</p>
+<p></p>
+<p></p>
 </body>
 </html>
