added css folder and put up temporary index page

--- a/index.html
+++ b/index.html
@@ -1,9 +1,29 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1>⚠️ ⚠️ ⚠️</h1>
-<p>WORK IN PROGRESS</p>
-<p></p>
-<p></p>
-</body>
+	<head>
+		<title>⚠️ ⚠️ ⚠️</title>
+		<!-- link to main stylesheet -->
+		<link rel="stylesheet" type="text/css" href="/css/main.css">
+	</head>
+	<body>
+		<nav>
+    		<ul>
+        		<li><a href="/">Home</a></li>
+	        	<!-- <li><a href="/about">About</a></li> -->
+    		</ul>
+		</nav>
+		<div class="container">
+    		<div class="blurb">
+        		<h1>Hi there, I'm Raymond!</h1>
+				<p>Work in Progress...</p>
+    		</div><!-- /.blurb -->
+		</div><!-- /.container -->
+		<footer>
+    		<ul>
+        		<li><a href="mailto:rsarinas@ualberta.ca">email</a></li>
+        		<li><a href="https://github.com/raysarinas">github</a></li>
+            <li><a href="http://vsco.co/raysarinas">vsco</a></li>
+			</ul>
+		</footer>
+	</body>
 </html>
