linked linkedin profile

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         		<li><a href="mailto:rsarinas@ualberta.ca">email</a></li>
         		<li><a href="https://github.com/raysarinas">github</a></li>
             <li><a href="http://vsco.co/raysarinas">vsco</a></li>
+						<li><a href="https://www.linkedin.com/in/raymond-sarinas-539395149/"><linkedin></a></li>
 			</ul>
 		</footer>
 	</body>
