added about page lol

--- a/about.html
+++ b/about.html
@@ -14,17 +14,10 @@
 		</nav>
 		<div class="container">
     		<div class="blurb">
-        		<h1>Hi there, I'm Raymond!</h1>
-				<p>Work in Progress...</p>
+        		<h1>About Me!</h1>
+				<p>I'm a second year Computer Software Engineering student at the University of Alberta.
+          Currently looking for a 4 month work term placement. </p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="mailto:rsarinas@ualberta.ca">email</a></li>
-        		<li><a href="https://github.com/raysarinas">github</a></li>
-            <li><a href="http://vsco.co/raysarinas">vsco</a></li>
-						<li><a href="https://www.linkedin.com/in/raymond-sarinas-539395149/"><linkedin></a></li>
-			</ul>
-		</footer>
 	</body>
 </html>
