updated lame about and centered text

--- a/about.html
+++ b/about.html
@@ -15,8 +15,9 @@
 		<div class="container">
     		<div class="blurb">
         		<h1>About Me!</h1>
-				<p>I'm a second year Computer Software Engineering student at the University of Alberta.
-          Currently looking for a 4 month work term placement. </p>
+				<p>I'm a second year Computer Software Engineering Coop student at the University of Alberta. </p>
+        <p>I have experience programming in C++, Python, and Swift. I know a bit of Assembly, Java, Ruby, Javascript, HTML, and CSS too. </p>
+        <p>Currently looking for a 4 month work term placement. </p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 	</body>
